--- a/display/styles/common/_var.scss
+++ b/display/styles/common/_var.scss
@@ -1,2 +1,3 @@
 $color-primary: #25e934;
+$color-primary-bold: #07e019;
 $color-secondary: #e0e0e0;
